sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: '<-' expected but ')' found.
    for (i-> 0 to longueur-2 ){
                             ^AlgBubbleSort1:18: error: illegal start of simple expression
  }
  ^